# exeutils

./: Cargo.toml  README.md
examples/: elf64_shellcode_to_exe.rs  elf_shellcode_to_exe.rs  pe32_shellcode_to_exe.rs  pe64_shellcode_to_exe.rs  pe_shellcode_to_exe.rs
src/: elf.rs  elf64.rs  lib.rs  pe.rs
src/elf64/: core.rs  layout.rs  mod.rs
src/pe/: mod.rs
src/pe/common/: core.rs  layout.rs  mod.rs
src/pe/pe32/: core.rs  layout.rs  mod.rs
src/pe/pe64/: core.rs  layout.rs  mod.rs
src/pe64/: core.rs  layout.rs
