[package]
name = "exeutils"
authors = ["dustyw0lf"]
version = "0.1.0"
edition = "2021"
description = "A crate for working with executable formats and shellcode."
repository = "https://github.com/dustyw0lf/exeutils"
keywords = ["linux", "windows", "elf", "pe"]
include = ["src", "Cargo.toml", "README.md"]

[features]
default = []
elf64 = []
pe32 = []
pe64 = []

[dependencies]
binary-layout = "4.0.2"

# Make examples work just with `cargo run --example <example>`
[dev-dependencies]
exeutils = { path = ".", features = ["elf64", "pe64"] }

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "warn"
